--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WorkshopUI</string>
+    <string name="details">Details</string>
+    <string name="name">Name</string>
 </resources>
